# Assignment4-multi-agent-tour-guide-parallel

./: .cache  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  agent_queue.py  collector.py  config.py  coverage.json  docker-compose.yml  env.example  google_maps_api.py  logger_setup.py  main.py  models.py  orchestrator.py  pyproject.toml  requirements.txt  run_dashboard.py  run_full_system.py  run_tour_dashboard.py  timer_scheduler.py
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
agents/: base_agent.py  config_loader.py  music_agent.py
agents/configs/: judge_agent.yaml  music_agent.yaml  video_agent.yaml
assets/images/: README.md
benchmarks/: README.md
benchmarks/configs/: baseline.yaml  high_quality.yaml  low_latency.yaml
config/: default.yaml
data/: sensitivity_analysis_results.json
deploy/kubernetes/: deployment.yaml  network-policy.yaml  resource-quota.yaml  service-monitor.yaml
deploy/prometheus/: prometheus.yml
docs/: API_KEYS_SETUP.md  API_REFERENCE.md  API_STRATEGY.md  ARCHITECTURE.md  ARCHITECTURE_DETAILED.md  DESIGN_DECISIONS.md  DEVELOPMENT_PROMPTS.md  EDGE_CASES.md  ISO_IEC_25010_COMPLIANCE.md  MIT_PRODUCTION_ARCHITECTURE.md  MIT_PROJECT_SPECIFICATION.md  OPERATIONS_GUIDE.md  PRD.md  PROJECT_CHECKLIST.md  PROJECT_STRUCTURE.md  PROMPT_BOOK.md  QUALITY_ATTRIBUTES.md  QUICKFIX.md  README.md  RETRY_AND_QUEUE_FLOW.md  REUSABLE_TEMPLATES.md  STARTUP_DESIGN.md  STARTUP_VISION.md  TESTING.md  UNIVERSITY_TO_STARTUP_BRIDGE.md
docs/adr/: 001-parallel-agent-architecture.md  002-smart-queue-timeout-strategy.md  003-circuit-breaker-pattern.md  004-plugin-architecture.md  005-statistical-analysis-framework.md  README.md  template.md
docs/diagrams/: DIAGRAM_GUIDE.md  README.md  agent-sequence.mmd  architecture-colorful.mmd  architecture-green.mmd  architecture-mit.mmd  research-pipeline.mmd  sequence-with-scheduler.mmd  smart-queue-flow.mmd  system-architecture.mmd
docs/research/: INNOVATION_FRAMEWORK.md  MATHEMATICAL_ANALYSIS.md  README.md
experiments/: README.md  registry.json
experiments/templates/: sensitivity_template.yaml
notebooks/: 01_sensitivity_analysis.ipynb  02_interactive_dashboard.ipynb  03_cost_analysis.ipynb  README.md
plugins/weather/: __init__.py  agent.py  plugin.py  plugin.yaml
reports/: README.md
scripts/: capture_screenshots.sh  iso25010_compliance_check.py  setup.sh
src/: __init__.py
src/agents/: __init__.py  base_agent.py  base_agent_v2.py  config_loader.py  judge_agent.py  music_agent.py  text_agent.py  video_agent.py
src/agents/configs/: judge_agent.yaml  music_agent.yaml  text_agent.yaml  video_agent.yaml
src/api/: __init__.py  app.py  client.py
src/cli/: __init__.py  main.py
src/core/: __init__.py  collector.py  feature_flags.py  orchestrator.py  smart_queue.py  timer_scheduler.py
src/core/di/: __init__.py  container.py  providers.py  scope.py
src/core/observability/: __init__.py  health.py  metrics.py  nps_metrics.py  tracing.py
src/core/plugins/: __init__.py  base.py  events.py  hooks.py  manager.py  registry.py
src/core/resilience/: __init__.py  bulkhead.py  circuit_breaker.py  fallback.py  rate_limiter.py  retry.py  timeout.py
src/cost_analysis/: __init__.py  models.py  optimizer.py  tracker.py  visualization.py
src/dashboard/: __init__.py  app.py  components.py  data_manager.py  tour_guide_dashboard.py
src/models/: __init__.py  content.py  decision.py  metrics.py  output.py  route.py  user_profile.py
src/research/: __init__.py  adaptive_learning.py  agent_negotiation.py  bayesian_optimization.py  causal_inference.py  experimental_framework.py  explainability.py  graph_neural_content.py  information_theory.py  meta_learning.py  sequential_optimization.py  statistical_analysis.py  uncertainty_quantification.py  visualization.py
src/services/: __init__.py  google_maps.py  tour_service.py
src/utils/: __init__.py  config.py  logger.py  retry.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_accessibility.py  test_api_integration.py  test_driver_safety.py  test_full_pipeline.py  test_graceful_degradation.py  test_tour_guide_dashboard_e2e.py  test_user_journeys.py
tests/integration/: __init__.py  test_agent_integration.py  test_queue_integration.py  test_tour_guide_dashboard_integration.py
tests/performance/: __init__.py  test_performance.py
tests/unit/: test_adaptive_learning.py  test_agent_negotiation.py  test_agents.py  test_api.py  test_api_client.py  test_base_agent.py  test_bayesian_optimization.py  test_causal_inference.py  test_cli.py  test_collector.py  test_config.py  test_cost_analysis.py  test_dashboard_components.py  test_dashboard_data_manager.py  test_di_container.py  test_di_providers.py  test_di_scope.py  test_experimental_framework.py  test_explainability.py  test_feature_flags.py  test_google_maps.py  test_graph_neural_content.py  test_information_theory.py  test_logger.py  test_meta_learning.py  test_models_content.py  test_models_decision.py  test_models_output.py  test_models_route.py  test_nps_metrics.py  test_observability_health.py  test_orchestrator.py  test_research_visualization.py  test_resilience_bulkhead.py  test_resilience_circuit_breaker.py  test_resilience_fallback.py  test_resilience_rate_limiter.py  test_resilience_retry.py  test_resilience_timeout.py  test_sequential_optimization.py  (+8 more)
