[project]
name = "multi-agent-tour-guide"
version = "2.0.0"
description = "Multi-Agent Tour Guide System with Parallel Processing"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Tour Guide Team", email = "team@example.com" }
]
keywords = [
    "ai",
    "agents",
    "multi-agent",
    "tour-guide",
    "llm",
    "parallel-processing",
    "orchestration",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# ============================================================================
# Core Dependencies
# ============================================================================
dependencies = [
    # Core
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # AI/LLM
    "openai>=1.6.0",
    "anthropic>=0.8.0",
    
    # HTTP
    "httpx>=0.25.0",
    
    # Logging & CLI
    "rich>=13.7.0",
    "typer>=0.9.0",
    
    # Configuration
    "pyyaml>=6.0",
]

# ============================================================================
# Optional Dependencies (install with: uv sync --extra <name>)
# ============================================================================
[project.optional-dependencies]
# Development tools
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",  # Required for FastAPI TestClient
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
    # Security
    "bandit[toml]>=1.7.0",
    "pip-audit>=2.6.0",
    # Documentation
    "pydocstyle>=6.3.0",
]

# API server
api = [
    "fastapi>=0.108.0",
    "uvicorn>=0.25.0",
]

# Google Maps integration
maps = [
    "googlemaps>=4.10.0",
]

# YouTube integration
youtube = [
    "google-api-python-client>=2.111.0",
    "youtube-search-python>=1.6.6",
]

# Spotify integration
spotify = [
    "spotipy>=2.23.0",
]

# Web search
search = [
    "duckduckgo-search>=4.1.0",
]

# Async support
async = [
    "aiohttp>=3.9.0",
]

# Research and analysis tools (MIT-level research framework)
research = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "notebook>=7.0.0",
]

# Interactive dashboard (MIT-level visualization)
dashboard = [
    "dash>=2.14.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
]

# All external APIs
apis = [
    "multi-agent-tour-guide[maps,youtube,spotify,search]",
]

# Full installation (everything)
all = [
    "multi-agent-tour-guide[dev,api,apis,async,research,dashboard]",
]

# ============================================================================
# Entry Points
# ============================================================================
[project.scripts]
tour-guide = "src.cli.main:app"
tour-dashboard = "src.dashboard.app:run_dashboard"

[project.urls]
Homepage = "https://github.com/yourusername/multi-agent-tour-guide"
Documentation = "https://github.com/yourusername/multi-agent-tour-guide/docs"
Repository = "https://github.com/yourusername/multi-agent-tour-guide"
Issues = "https://github.com/yourusername/multi-agent-tour-guide/issues"

# ============================================================================
# Build System
# ============================================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ============================================================================
# UV Configuration
# ============================================================================
[tool.uv]
# Use system Python by default
python-preference = "managed"

# Development dependencies always installed
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

# ============================================================================
# Ruff (Linter & Formatter)
# ============================================================================
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "N818",   # exception name should end with 'Error' (existing code uses different pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ============================================================================
# MyPy (Type Checking)
# ============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict = false

# ============================================================================
# Pytest
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
# asyncio_mode = "auto"  # Uncomment when using pytest-asyncio

# ============================================================================
# Coverage
# ============================================================================
[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "src/agents/base_agent_v2.py",  # Deprecated/experimental
    "src/agents/config_loader.py",   # Configuration loading
    "src/core/plugins/*",            # Plugin infrastructure
    "src/core/observability/metrics.py",  # Metrics infrastructure
    "src/core/observability/tracing.py",  # Tracing infrastructure
    "src/core/timer_scheduler.py",   # Timer with sleep() - slow tests
    "src/cli/main.py",               # CLI entry point
    "src/agents/video_agent.py",     # YouTube API dependent
    "src/agents/music_agent.py",     # Spotify/YouTube API dependent
    "src/agents/text_agent.py",      # Wikipedia API dependent
    "src/models/metrics.py",         # Duplicate of smart_queue.QueueMetrics
    "src/dashboard/app.py",          # Dash UI layer - requires server runtime
    "src/dashboard/__init__.py",     # Lazy imports module
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class.*Protocol.*:",
    "@abstractmethod",
    "except ImportError",
    "except ModuleNotFoundError",
    "logger.debug",
    "logger.warning",
    "logger.error",
    "logger.info",
]

# ============================================================================
# Bandit (Security Linter)
# ============================================================================
[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101"]  # Skip assert warnings in tests

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]

# ============================================================================
# Commitizen (Conventional Commits)
# ============================================================================
[tool.commitizen]
name = "cz_conventional_commits"
version = "2.0.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "src/__init__.py:__version__",
]
